force-app/main/default/objects/Opportunity/fields/Approved_Price__c.field-meta.xml
<CustomField>
    <fullName>Approved_Price__c</fullName>
    <label>Approved Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>