force-app/main/default/objects/Opportunity/fields/CYCC__Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>CYCC__Commission_Amount__c</fullName>
    <label>Commission Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>