force-app/main/default/objects/Opportunity/fields/CYCC__OpportunityWonCloseDate__c.field-meta.xml
<CustomField>
    <fullName>CYCC__OpportunityWonCloseDate__c</fullName>
    <label>Opportunity Won Close Date</label>
    <type>Date</type>
</CustomField>