force-app/main/default/objects/Opportunity/fields/CYCC__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CYCC__OrderNumber__c</fullName>
    <label>Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>