force-app/main/default/objects/Opportunity/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <formula>Proposed_Price__c   * ( 1 - Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>