force-app/main/default/objects/Opportunity/fields/Property_Unit__c.field-meta.xml
<CustomField>
    <fullName>Property_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Unit</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>