force-app/main/default/objects/Opportunity/fields/Proposed_Price__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Price__c</fullName>
    <label>Proposed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>