force-app/main/default/objects/Opportunity/fields/Sub_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sub_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Unit</label>
    <referenceTo>Sub_Unit__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>