force-app/main/default/objects/Opportunity/recordTypes/Property_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Property_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Property Opportunity sales process</businessProcess>
    <label>Property Opportunity</label>
</RecordType>